--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "website",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://ahavasi.github.io/website",
+  "homepage": "https://ahavasi.github.io",
   "type": "module",
   "scripts": {
     "dev": "vite",
